2014-11-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c: Call gui-set-selection instead of x-set-selection.
	* xdisp.c (window-scroll-functions): Improve docstring.

2014-11-07  Paul Eggert  <eggert@cs.ucla.edu>

	Uniquify the 'size' symbol.
	* frame.c (Qsize):
	* w32notify.c (Qsize): Remove.
	* lisp.h (Qsize): New decl.
	* lread.c (Qsize): Now extern.
	* w32notify.c (syms_of_w32notify): No need to defsym.

2014-11-07  Martin Rudalics  <rudalics@gmx.at>

	* dispnew.c (change_frame_size_1): Fix call of
	adjust_frame_size.
	* frame.c (Qsize, Qframe_position, Qframe_outer_size)
	(Qframe_inner_size, Qexternal_border_size, Qtitle_height)
	(Qmenu_bar_external, Qmenu_bar_size, Qtool_bar_external)
	(Qtool_bar_size): New constants.
	(frame_inhibit_resize, adjust_frame_size): New argument to
	handle case where frame_inhibit_implied_resize is a list.
	(Fmake_terminal_frame, Fset_frame_height, Fset_frame_width)
	(Fset_frame_size, x_set_left_fringe, x_set_right_fringe)
	(x_set_right_divider_width, x_set_bottom_divider_width)
	(x_set_vertical_scroll_bars, x_set_horizontal_scroll_bars)
	(x_set_scroll_bar_width, x_set_scroll_bar_height):
	Update callers.
	(frame-inhibit-implied-resize): Rewrite doc-string.
	* frame.h (frame_inhibit_resize, adjust_frame_size):
	Fix external declarations.
	(Qframe_position, Qframe_outer_size)
	(Qframe_inner_size, Qexternal_border_size, Qtitle_height)
	(Qmenu_bar_external, Qmenu_bar_size, Qtool_bar_external)
	(Qtool_bar_size): Extern them.
	* gtkutil.c (FRAME_TOTAL_PIXEL_HEIGHT, FRAME_TOTAL_PIXEL_WIDTH)
	(xg_height_or_width_changed): Remove.
	(xg_frame_set_char_size): Adjust adjust_frame_size calls.
	(menubar_map_cb, xg_update_frame_menubar, free_frame_menubar)
	(tb_size_cb, update_frame_tool_bar, free_frame_tool_bar)
	(xg_change_toolbar_position): Call adjust_frame_size directly.
	* nsfns.m (x_set_internal_border_width, Fx_create_frame):
	Fix calls of adjust_frame_size.
	* w32fns.c (x_set_internal_border_width, x_set_menu_bar_lines)